Fixed unintentional horizontal scroll

--- a/src/page.css
+++ b/src/page.css
@@ -42,6 +42,7 @@
 
 .page-footer {
     background-color: var(--black);
+    box-sizing: border-box;
     display: block;
     font-size: 1.4rem;
     margin: 0 auto;
